--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,2 +1,3 @@
-<h1><%= @page.name %></h1>
-<p><%= @page.content %></p>
+<h1><span id="page_name" class="mercury-region" data-type="editable"><%= @page.name %></span></h1>
+<div id="page_content" class="mercury-region", data-type="editable"><%= @page.content %></div>
+<p><%= link_to "Edit Page", "/editor" + request.path, id: "edit_link", data: {save_url: mercury_update_page_path(@page)}%></p>
