--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,13 @@
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
+			<% if current_user %>
+			  Logged in as <%= current_user.email %>.
+			  <%= link_to "Log out", logout_path %>
+			<% else %>
+			  <%= link_to "Sign up", signup_path %> or
+			  <%= link_to "log in", login_path %>.
+			<% end %>
       <%= content_tag :h1, yield(:title) if show_title? %>
 			<%= render 'layouts/topnav'%>
       <%= yield %>
