--- a/app/views/layouts/_topnav.html.erb
+++ b/app/views/layouts/_topnav.html.erb
@@ -1,3 +1,11 @@
-<a href="/">Home</a>
-<a href="/pages/About">About</a>
-<a href="/pages/Contact">Contact</a>
+<nav><!-- top nav -->
+	<div class="menu">
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="/pages/about">About</a></li>
+			<li><a href="/pages/events">Events</a></li>
+			<li><a href="/pages/news">News</a></li>
+			<li><a href="/pages/contact">Contact Us</a></li>
+		</ul>
+	</div>
+</nav><!-- end of top nav -->
