--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+		<meta charset="utf-8" />
+		
+		<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
@@ -8,7 +11,9 @@
     <%= yield(:head) %>
   </head>
   <body>
-    <div id="container">
+		<div id="wrapper"><!-- #wrapper -->
+			<%=render 'layouts/header'%>
+			<%=render 'layouts/topnav'%>
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
@@ -20,8 +25,91 @@
 			  <%= link_to "log in", login_path %>.
 			<% end %>
       <%= content_tag :h1, yield(:title) if show_title? %>
-			<%= render 'layouts/topnav'%>
-      <%= yield %>
-    </div>
+			
+   
+
+			<section id="main"><!-- #main content and sidebar area -->
+					<section id="content"><!-- #content -->
+   <%= yield %>
+
+					</section><!-- end of #content -->
+						<aside id="sidebar"><!-- sidebar -->
+								<h3>Things To Do</h3>
+									<ul>
+										<li><a href="#">Play Games</a></li>
+										<li><a href="#">Chat With Friends</a></li>
+										<li><a href="#">Swap Stories</a></li>
+										<li><a href="#">Sell Stuff</a></li>
+										<li><a href="#">Buy Stuff</a></li>
+										<li><a href="#">Trade Stuff</a></li>
+									</ul>
+
+								<h3>Sponsors</h3>
+									<%=image_tag "ad180.png", alt:""%><br /><br />
+
+								<h3>Connect With Us</h3>
+									<ul>
+										<li><a href="#">Twitter</a></li>
+										<li><a href="#">Facebook</a></li>
+										<li><a href="#">LinkedIn</a></li>
+										<li><a href="#">Flickr</a></li>
+									</ul>
+
+						</aside><!-- end of sidebar -->
+
+					</section><!-- end of #main content and sidebar-->
+					<footer>
+					<section id="footer-area">
+
+						<section id="footer-outer-block">
+								<aside class="footer-segment">
+										<h4>Friends</h4>
+											<ul>
+												<li><a href="#">one linkylink</a></li>
+												<li><a href="#">two linkylinks</a></li>
+												<li><a href="#">three linkylinks</a></li>
+											</ul>
+								</aside><!-- end of #first footer segment -->
+
+								<aside class="footer-segment">
+										<h4>Awesome Stuff</h4>
+											<ul>
+												<li><a href="#">one linkylink</a></li>
+												<li><a href="#">two linkylinks</a></li>
+												<li><a href="#">three linkylinks</a></li>
+											</ul>
+								</aside><!-- end of #second footer segment -->
+
+								<aside class="footer-segment">
+										<h4>Coolness</h4>
+											<ul>
+												<li><a href="#">one linkylink</a></li>
+												<li><a href="#">two linkylinks</a></li>
+												<li><a href="#">three linkylinks</a></li>
+											</ul>
+								</aside><!-- end of #third footer segment -->
+
+								<aside class="footer-segment">
+										<h4>Blahdyblah</h4>
+											<p>&copy; 2010 <a href="#">yoursite.com</a> Praesent libero. Sed cursus ante dapibus diam. Sed nisi.</p>
+								</aside><!-- end of #fourth footer segment -->
+
+						</section><!-- end of footer-outer-block -->
+
+					</section><!-- end of footer-area -->
+				</footer>
+		</div>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+
   </body>
 </html>
