Moved login items and flash message, fixed html output of pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,21 @@
     <%= yield(:head) %>
   </head>
   <body>
+		<% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <% end %>
 		<div id="wrapper"><!-- #wrapper -->
-			<%=render 'layouts/header'%>
-			<%=render 'layouts/topnav'%>
-      <% flash.each do |name, msg| %>
-        <%= content_tag :div, msg, :id => "flash_#{name}" %>
-      <% end %>
-			<% if current_user %>
+			<div align="right" style="margin-right: 10px;"><% if current_user %>
 			  Logged in as <%= current_user.email %>.
 			  <%= link_to "Log out", logout_path %>
 			<% else %>
 			  <%= link_to "Sign up", signup_path %> or
 			  <%= link_to "log in", login_path %>.
-			<% end %>
+			<% end %></div>
+			<%=render 'layouts/header'%>
+			<%=render 'layouts/topnav'%>
+      
+			
       <%= content_tag :h1, yield(:title) if show_title? %>
 			
    
